--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
     <meta name="viewport" content="width=device-width initial-scale=1">
     <title>Test</title>
-    <link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+    <!--<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css"> -->
+    <link rel="stylesheet" href="assets/bootstrap.min.css">
     <script src="assets/main.js" defer></script>
     <link rel="stylesheet" href="assets/style.css">
 </head>
