--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 </head>
 <body>
     <main>
+        <div id="test-side" class="container">
         <div id="test" class="row text-center mt-5">
             <div class="col-1">
                 <button type="button" class="btn btn-primary" id="prev-button">&lt;</button>
@@ -40,7 +41,13 @@
             </form>
             <button type="button" class="btn btn-primary" id="next-button">Start test</button>
             <h3 id="result"></h3>
+            <div id="test-pager" class="row text-center mt-1 justify-content-around align-items-center">
+                <div class="col-1 p-0">
+                    <button type="button" class="btn btn-primary pager-button" id="test-pager-button-1" disabled>1</button>
+                </div>
             </div>
+            </div>
+        </div>
         </div>
     </main>
 </body>
